--- a/angular-project/src/app/sign-up/sign-up.component.html
+++ b/angular-project/src/app/sign-up/sign-up.component.html
@@ -1,5 +1,8 @@
-<div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2">
-  <div class="card">
+<div
+  class="col-lg-6 offset-lg-3 col-md-8 offset-md-2"
+  *ngIf="!signUpSuccess; else successMessage"
+  >
+  <div class="card" data-testid="form-sign-up">
     <div class="card-header text-center">
       <h1>Sign Up</h1>
     </div>
@@ -26,11 +29,18 @@
         />
       </div>
       <div class="text-center">
-        <button class="btn btn-primary" [disabled]="isDisabled() || apiProgress">
-          <span *ngIf="apiProgress" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        <app-button
+          [disabled]="isDisabled()"
+          [apiProgress]="apiProgress"
+        >
           Sign Up
-        </button>
+        </app-button>
       </div>
     </form>
   </div>
 </div>
+<ng-template #successMessage>
+  <app-alert>
+    Please check your e-mail to activate your account
+  </app-alert>
+</ng-template>
