--- a/angular-project/src/app/sign-up/sign-up.component.html
+++ b/angular-project/src/app/sign-up/sign-up.component.html
@@ -6,18 +6,18 @@
     <div class="card-header text-center">
       <h1>Sign Up</h1>
     </div>
-    <form class="card-body" (submit)="onClickSignUp(); $event.preventDefault()">
+    <form (ngSubmit)="onClickSignUp()" [formGroup]="form" class="card-body">
       <div class="mb-3">
         <label for="username" class="form-label">Username</label>
-        <input id="username" class="form-control" (input)="onChangeUsername($event)" />
+        <input id="username" class="form-control" formControlName="username"/>
       </div>
       <div class="mb-3">
         <label for="email" class="form-label">E-mail</label>
-        <input id="email" class="form-control" (input)="onChangeEmail($event)" />
+        <input id="email" class="form-control" formControlName="email"/>
       </div>
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
-        <input id="password" class="form-control" type="password" (input)="onChangePassword($event)" />
+        <input id="password" class="form-control" type="password" formControlName="password"/>
       </div>
       <div class="mb-3">
         <label for="passwordRepeat" class="form-label">Password Repeat</label>
@@ -25,7 +25,7 @@
           id="passwordRepeat"
           class="form-control"
           type="password"
-          (input)="onChangePasswordRepeat($event)"
+          formControlName="passwordRepeat"
         />
       </div>
       <div class="text-center">
