--- a/angular-project/src/app/sign-up/sign-up.component.html
+++ b/angular-project/src/app/sign-up/sign-up.component.html
@@ -9,24 +9,48 @@
     <form (ngSubmit)="onClickSignUp()" [formGroup]="form" class="card-body">
       <div class="mb-3">
         <label for="username" class="form-label">Username</label>
-        <input id="username" class="form-control" formControlName="username"/>
+        <input id="username" class="form-control" [ngClass]="usernameError ? 'is-invalid' : ''"
+        formControlName="username"/>
+        <div data-testid="username-validation"
+        class="invalid-feedback"
+        *ngIf="usernameError">
+          {{usernameError}}
+        </div>
       </div>
       <div class="mb-3">
         <label for="email" class="form-label">E-mail</label>
-        <input id="email" class="form-control" formControlName="email"/>
+        <input id="email" class="form-control" [ngClass]="emailError ? 'is-invalid' : ''"
+        formControlName="email"/>
+        <div data-testid="email-validation"
+        class="invalid-feedback"
+        *ngIf="emailError">
+          {{emailError}}
+        </div>
       </div>
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
-        <input id="password" class="form-control" type="password" formControlName="password"/>
+        <input id="password" class="form-control" [ngClass]="passwordError ? 'is-invalid' : ''"
+        type="password" formControlName="password"/>
+        <div data-testid="password-validation"
+        class="invalid-feedback"
+        *ngIf="passwordError">
+          {{passwordError}}
+        </div>
       </div>
       <div class="mb-3">
         <label for="passwordRepeat" class="form-label">Password Repeat</label>
         <input
           id="passwordRepeat"
           class="form-control"
+          [ngClass]="passwordRepeatError ? 'is-invalid' : ''"
           type="password"
           formControlName="passwordRepeat"
         />
+        <div data-testid="passwordRepeat-validation"
+        class="invalid-feedback"
+        *ngIf="passwordRepeatError">
+          {{passwordRepeatError}}
+        </div>
       </div>
       <div class="text-center">
         <app-button
