--- a/angular-project/src/app/activate/activate.component.html
+++ b/angular-project/src/app/activate/activate.component.html
@@ -1,6 +1,6 @@
 
 <div data-testid="activation-page">
-  <span *ngIf="activationStatus === 'inProgress'" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+  <span *ngIf="activationStatus === 'inProgress'" class="spinner-border spinner-border-sm" role="status"></span>
   <app-alert *ngIf="activationStatus === 'success'">Account is activated</app-alert>
   <app-alert *ngIf="activationStatus === 'fail'" type="danger">Activation failure</app-alert>
 </div>
